fix: spacing around post links

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -195,7 +195,7 @@ figure.full-bleed {
         }
 
         h2.post-list-header + ul {
-            margin: 0 0 $spacing-unit $spacing-unit;
+            margin: 0;
         }
 
 
